--- a/core/static/dashboard_style.css
+++ b/core/static/dashboard_style.css
@@ -925,7 +925,7 @@ html, body {
     align-items: center;
     margin-bottom: 10px;
 }
-/* ==================== GROUPS POPUP ==================== */
+/* ==================== GROUPS AND COMPOSE POPUP ==================== */
 .popup {
     display: none;
     position: fixed;
